# OpenGLRawgenBase

./: .gitignore  OpenGLRawgenBase.cabal  README.md
OpenGLRawInterface/: OpenGLRawInterface.cabal
OpenGLRawInterface/src/Language/OpenGLRaw/Interface/: Query.hs  Serialize.hs  Types.hs  Xml.hs
OpenGLRawgenBase/: OpenGLRawgenBase.cabal
OpenGLRawgenBase/src/Language/OpenGLRaw/: Base.hs
src/Language/OpenGLRaw/: Base.hs
