name:                OpenGLRawgenBase
version:             0.1.0.0
synopsis:            Shared types OpenGLRawgen related packages.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Lars Corbijn
maintainer:          aspergesoepje@gmail.com
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  -- exposed-modules:
  -- other-modules:
  build-depends:
    base >= 4
