name:                OpenGLRawInterface
version:             0.1.0.0
synopsis:            Interface file for OpenGLRaw
-- description:
license:             BSD3
license-file:        LICENSE
author:              Lars Corbijn
maintainer:          aspergesoepje@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

library
  --exposed-modules:
  -- other-modules:
  build-depends:
    base ==4.6.*,
    containers,
    OpenGLRawgenBase
  ghc-options:
    -Wall -O2
  hs-source-dirs: src
