name:                OpenGLRawInterface
version:             0.1.0.0
synopsis:            Interface file for OpenGLRaw
-- description:
license:             BSD3
license-file:        LICENSE
author:              Lars Corbijn
maintainer:          aspergesoepje@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Language.OpenGLRaw.Interface.Query
    Language.OpenGLRaw.Interface.Types
    Language.OpenGLRaw.Interface.Xml
    Language.OpenGLRaw.Interface.Serialize
  -- other-modules:
  build-depends:
    base >= 4,
    containers,
    OpenGLRawgenBase,
    haskell-src-exts,
    xml,
    filepath,
    directory,
    mtl
  ghc-options:
    -Wall -O2
  hs-source-dirs: src
